# kobo-library

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.agents/skills/implement-ephemeral-shelves/: SKILL.md
.agents/skills/implement-ephemeral-shelves/agents/: openai.yaml
.agents/skills/release-epub-drop/: SKILL.md
.agents/skills/release-epub-drop/agents/: openai.yaml
.agents/skills/review-public-hosting/: SKILL.md
.agents/skills/review-public-hosting/agents/: openai.yaml
.github/workflows/: ci.yml
docs/: architecture.md  baseline.md  decisions.md  kobo-smoke-test.md  operations.md  release-process.md  roadmap.md
migrations/: 0001_persistence_foundation.sql  0002_capability_tokens.sql
scripts/: install-kepubify-linux.sh
src/: books.rs  config.rs  conversion.rs  epub.rs  error.rs  library.rs  main.rs  observability.rs  repository.rs  routes.rs  shelves.rs  storage.rs
static/: app.js  common.js  shelf.html  style.css  upload.html
