[package]
name = "kobo-library"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
base64 = "0.22.1"
chrono = { version = "0.4.45", features = ["serde"] }
libc = "0.2.186"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
roxmltree = "0.21.1"
rand = "0.8.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", default-features = false, features = ["chrono", "macros", "migrate", "runtime-tokio", "sqlite"] }
subtle = "2.6.1"
tokio = { version = "1.52.3", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["io"] }
tower-http = { version = "0.7.0", features = ["fs", "timeout"] }
uuid = { version = "1.23.4", features = ["v4"] }
url = "2.5.8"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
http-body-util = "0.1.3"
tower = { version = "0.5.3", features = ["util"] }
